--- a/todo.txt
+++ b/todo.txt
@@ -18,19 +18,22 @@ SPEED
 Speed is determined by the number of engines (affected by damage) * power to engines
 
 
-GAMEPLAY
-Random events - enemy ship turns up, meteor storm
-Man weapon console to shoot
+TODO
+AddWalls not working quite right
+Do laser effects, shooting effects, explosion effect
+DONE Door open/close not changing gfx
+DONE Highlighted unit leaves trail
+DONE Seeing mapsquares through walls
+DONE Always draw space even if not seen
+DONE Highlight current unit
+DONE Concurrent modification on mapsquare entities
+DONE Draw dots in space
+DONE Make seen squares darker
 Shoot lasers from defined weapons points
-Add airlock to map
-Add weapons console to map
-Add weapon points to map
 Show stars moving when ship launched
 Weapon console - press key to fire weapons.  Weapons have reload time.
 Say "no power"
-AddWalls not working quite right
 Design screen layout
-Give msglog a background colour
 Fire may start when ship hit
 Walls may be destroyed causing oxygen loss
 Doors not open if vacuum
@@ -64,6 +67,7 @@ Hover mouse over square to identify
 Fly ship around space map
 Trade with space station
 Encounter other ships when moving around in space
+Random events - enemy ship turns up, meteor storm
 Engines - get ship ready for warp
 Send out mayday signal
 Receive mayday signal
