--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -19,6 +19,7 @@ Speed is determined by the number of engines (affected by damage) * power to eng
 
 
 TODO
+Create ascii images from pngs
 AddWalls not working quite right
 Show stars moving when ship launched
 Don't add walls around airlock
