--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,4 +1,5 @@
 FTL
+Astro Commander
 Keep it simple at first!
 
 STORY - EPISODE 1
@@ -19,20 +20,19 @@ Speed is determined by the number of engines (affected by damage) * power to eng
 
 
 TODO
-Highlight current unit in red immed
+loadResource instead of directly
 Don't duplicate help
 Make screen wider
 DefaultView - split up into areas
-Show "alert!  meteror storm!"
-After setting engines etc, show new power diff
-Meteor storm causes more damage if moving fast
+DONE Show "alert!  meteror storm!"
 DONE Show stars moving when ship launched
 Don't add walls around airlock
-Don't iterate over the whole map?
-Improve input method for picking up
+DONE Improve input method for picking up
 Say "no power"
 Doors not open if vacuum
 Make stats random
+AbstractSpaceLocations have comms menu to talk to them
+
 
 EVENTS
 Enemy ship off starboard bow
@@ -42,9 +42,11 @@ Aliens invade ship
 Installations break down
 Solar flare
 Encounter empty hulk
+Police search ship
 
 
 LATER
+Highlight important log entries in red
 Mobs pick up weapons if better than what they have
 Drums that explode
 All units can do all actions, but specialists are better
@@ -52,12 +54,11 @@ Buy crewmembers
 Can board and take control of enemy ships
 Scroll map
 Stock up on fuel at spacestation
-loadResource instead of directly
 Have background stories for units
 Player can choose where installations go
-LATER Engines leak coolant if no power
+Engines leak coolant if no power
 Mech-suit
-LATER Units wear spacesuit to go into non-oxygen areas
+Units wear spacesuit to go into non-oxygen areas
 Hover mouse over square to identify
 Fly ship around space map
 Trade with space station
@@ -65,6 +66,7 @@ Encounter other ships when moving around in space
 Engines - get ship ready for warp
 Send out mayday signal
 Receive mayday signal
+Don't iterate over the whole map?
 LATER Sleeping quarters
 LATER Fuel TODO - Determines ships range
 Create ascii images from pngs
@@ -87,6 +89,8 @@ Units get tired - sleep in bed to regen
 
 MISSIONS
 Deliver alien egg
+Give someone a ride (maybe fugitive?)
+Smuggle stuff
 
 
 UNIT SKILLS
