--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,4 +1,3 @@
-FTL
 Astro Commander
 Keep it simple at first!
 
@@ -20,13 +19,12 @@ Speed is determined by the number of engines (affected by damage) * power to eng
 
 
 TODO
+Improve DefaultView
 Add licence
 Set up web page - add screenshots
 DONE Improve help
-Test oxygen
 Don't duplicate help
 Make screen wider
-DefaultView - split up into areas
 Make stats random
 
 
@@ -75,7 +73,6 @@ Board enemy ships
 Engines explode when damaged 100%
 Overlays - damage, oxygen, unit routes
 Scanners: see what's going on in flying mode
-Torpedo bay: launch weapon
 Randomly generate maps
 Load/save
 Cloaking device
