--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -19,6 +19,7 @@ Speed is determined by the number of engines (affected by damage) * power to eng
 
 
 TODO
+Show "dead" next to unit if killed
 Button to fly forwards
 Not exiting when window closes
 DefaultView - split up into areas
