--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -19,13 +19,13 @@ Speed is determined by the number of engines (affected by damage) * power to eng
 
 
 TODO
-Button to fly forwards
-Not exiting when window closes
-DefaultView - split up into areas
-Add licence
 Set up web page - add screenshots
+DONE Not exiting when window closes
+DONE Button to fly forwards
+DONE Add licence
 DONE Improve help
 Don't duplicate help
+DefaultView - split up into areas
 Make stats random
 
 
